--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
   </noscript>
-  <script src="./Js/parabola-min.js"></script>
+  <script src="./js/parabola-min.js"></script>
 
   <div id="app"></div>
   <!-- built files will be auto injected -->
